--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <meta name="title" content="Feliz Navidad mi amor!" />
+    <meta name="description" content="Ven a ver si hay una linda sorpresa para ti♡" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Feliz Navidad mi amor!" />
+    <meta property="og:description" content="Ven a ver si hay una linda sorpresa para ti♡" />
+    <!-- <meta property="og:url" /> -->
+    <meta property="og:image" content="https://i.pinimg.com/736x/41/e1/65/41e1654b8162cf95c61f6936058f924c.jpg" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Feliz Navidad mi amor!" />
+    <meta property="twitter:description" content="Ven a ver si hay una linda sorpresa para ti♡" />
+    <meta property="twitter:image" content="https://i.pinimg.com/736x/41/e1/65/41e1654b8162cf95c61f6936058f924c.jpg" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/logo.png">
     <title>Feliz Navidad Mi Am♡r🎁</title>
