--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <meta name="title" content="Feliz Navidad mi amor!" />
     <meta name="description" content="Ven a ver si hay una linda sorpresa para ti♡" />
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
     <meta property="og:title" content="Feliz Navidad mi amor!" />
     <meta property="og:description" content="Ven a ver si hay una linda sorpresa para ti♡" />
-    <!-- <meta property="og:url" /> -->
     <meta property="og:image" content="https://i.pinimg.com/736x/41/e1/65/41e1654b8162cf95c61f6936058f924c.jpg" />
-    <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="Feliz Navidad mi amor!" />
@@ -26,7 +23,7 @@
 
 <body>
   
-  <div class="snow snow1"></div>
+   <div class="snow snow1"></div>
   <div class="snow snow2"></div>
   <div class="snow snow3"></div>
   <div class="snow snow4"></div>
@@ -76,7 +73,6 @@
   <div class="snow snow48"></div>
   <div class="snow snow49"></div>
   <div class="snow snow50"></div>
-
 
   <div class="container text-center align-items-center justify-content-center">
     <section class="contenedor01">
@@ -179,6 +175,9 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-4">
         <button id="botón3" class="btn btn-block sorpresa3"><strong>Próximamente</strong></button>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 mb-4">
+        <button id="botón4" class="btn btn-block sorpresa4"><strong>Próximamente</strong></button>
       </div>
     </div>
   </div>
